# everything-teams-pkg-

./: .breakpoints  README.md  cs_test.py  main.py  pyproject.toml
System/Threading/: Thread.py
archive/: __init__.py  _everything.py  autocode.py  autotest.py  c.py  cs.py  custom_loops.py  fakecoding.py  importfuncs.py  pyc-exe.py  rand_test.py  randomtest.py  test2.py  test_namespace.py  testcode.txt  tests.py
archive/ASP/: NET.py
archive/System/: Console.py  __init__.py
archive/fakeautocode/: code.txt
archive/fakecode/: fakecode.txt  fakecode2.txt  fakecode3.txt  fakecode4.txt
archive/js/: javascript.py  js_test.py  jspydocs.md  jspyinterpreter.py
archive/std/: py.py
archive/stdio/: h.py
concept/: concept_test.py
everything/: __init__.py  binary.py  c_utils.py  console.py  csharp_utils.py  customexceptions.py  defaultarrays.py  files.py  mathfuncs.py  pyyt.py  rand.py  randomkey.py
everything/console_game_engine/: game.py
everything/console_game_engine/demos/: demo1.py  demo2.py
everything/search_directory/: findfile.py  readfile.py
stdio/: h.py
