[tool.poetry]
name = "repl_python3_beta_everything-(teams-pkg)"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
getch = "^1.0"
pygame = "^2.1.0"
pytube = "^11.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
